--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,20 @@
     width: 50%;
     text-align: center;
 }
+
+.navbar-default {
+    background-color: #fff;
+}
+
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav>li>a {
+    color: #000;
+}
+
+.navbar-default .navbar-nav>li>a {
+    font-size: 16px;
+}
+
+.navbar-default .navbar-nav>li>a>span {
+    font-size: 14px;
+}
